feat: feedback buttons

--- a/public/courses.html
+++ b/public/courses.html
@@ -193,7 +193,20 @@
           </div>
   
           <div id="prompt-response"></div>
-          <button id="resume-search" type="button" class="btn btn-primary mt-3 d-none">Resume Search</button>
+
+          <div id="resume-search" class="d-none row  mt-3">
+            <div class="col">&nbsp;</div>
+            <div class="col text-center">
+              <button type="button" class="btn btn-primary">Modify Search</button>
+            </div>
+            <div class="col text-end">
+              <div class="btn-group" role="group" aria-label="Feedback">
+                <button type="button" class="btn btn-outline-primary"><i class="fas fa-thumbs-down"></i></button>
+                <button type="button" class="btn btn-outline-primary"><i class="fas fa-thumbs-up"></i></button>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
