feat: fake refine search button

--- a/public/courses.html
+++ b/public/courses.html
@@ -197,7 +197,7 @@
           <div id="resume-search" class="d-none row  mt-3">
             <div class="col">&nbsp;</div>
             <div class="col text-center">
-              <button type="button" class="btn btn-primary">Modify Search</button>
+              <button type="button" class="btn btn-primary">Refine Search</button>
             </div>
             <div class="col text-end">
               <div class="btn-group" role="group" aria-label="Feedback">
