--- a/public/courses.html
+++ b/public/courses.html
@@ -118,6 +118,22 @@
     </div>
     <!-- Header End -->
 
+    <!-- Toast Start -->
+    <div class="position-fixed top-0 end-0 p-3 toaster">
+      <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <i class="fs-5 fa fa-info-circle text-primary pe-2"></i>
+          <strong class="me-auto">Recommendation</strong>
+          <small>Now</small>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+      </div>
+    </div>
+    <!-- Toast End -->
+
     <!-- Help me decide Start -->
     <div class="container-xxl py-3 help">
       <div class="container">
@@ -327,9 +343,9 @@
         <div class="course-item bg-light">
           <div class="position-relative overflow-hidden">
             <img class="img-fluid course-image" src="img/course-3.jpg" alt="" />
-            <a href="#" class="course-favorite-icon">
-              <i class="fs-5 fa fa-heart text-secondary"></i>
-            </a>
+            <button type="button" class="course-favorite-icon text-secondary">
+              <i class="fs-5 fa fa-heart no-event"></i>
+            </button>
             <div
               class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4"
             >
